--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ sudo: required
 
 before_install:
   - "sudo apt-get install wireless-tools"
+  - "sudo apt-get install python-netifaces"
 
 
 install:
